src/objects/Abandoned_Shopping_Cart_Salesforce__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Abandoned_Shopping_Cart_Salesforce</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Biling_Street__c</fullName>
        <label>Biling Street</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_City__c</fullName>
        <label>Billing City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Country__c</fullName>
        <label>Billing Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_House_Number__c</fullName>
        <label>Billing House Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Postal_Code__c</fullName>
        <label>Billing Postal Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_State__c</fullName>
        <label>Billing State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cart_ID__c</fullName>
        <externalId>true</externalId>
        <label>Cart ID</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Abandoned_Shopping_Cart_Salesforce</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <label>Currency</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <description>Order Date</description>
        <label>Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <label>Discount</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Main_City__c</fullName>
        <label>Main City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Main_Country__c</fullName>
        <label>Main Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Main_House_Number__c</fullName>
        <label>Main House Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Main_Postal_Code__c</fullName>
        <label>Main Postal Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Main_State__c</fullName>
        <label>Main State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Main_Street__c</fullName>
        <label>Main Street</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Line_Items__c</fullName>
        <description>Product Line Items of last Order</description>
        <label>Product Line Items</label>
        <length>20000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sales_Organization__c</fullName>
        <label>Sales Organization</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_City__c</fullName>
        <label>Shipping City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Cost__c</fullName>
        <description>Amount of Shipping Cost</description>
        <label>Shipping Cost</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Country__c</fullName>
        <label>Shipping Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_House_Number__c</fullName>
        <label>Shipping House Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Postal_Code__c</fullName>
        <label>Shipping Postal Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_State__c</fullName>
        <label>Shipping State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Street__c</fullName>
        <label>Shipping Street</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subtotal__c</fullName>
        <label>Subtotal</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax__c</fullName>
        <label>Tax</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <description>Amount of Order Total</description>
        <label>Total</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Abandoned Shopping Cart</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Cart_ID__c</columns>
        <columns>Contact__c</columns>
        <columns>Status__c</columns>
        <columns>Date__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Sales_Organization__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sales_Organization__c</field>
            <operation>equals</operation>
            <value>SAP_0975</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Abandoned Shopping Carts</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>